# whisper_comparison

./: .gitignore  Cargo.toml  Makefile  README.md
benches/: my_benchmark.rs
src/: lib.rs  main.rs  whisper_burn.rs  whisper_cpp_wrapper.rs
src/whisper_burn/: audio.rs  helper.rs  model.rs  token.rs  transcribe.rs
src/whisper_cpp_wrapper/: ffmpeg_decoder.rs  model.rs  transcript.rs  utils.rs  whisper.rs
