[package]
name = "whisper_comparison"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
audrey = { version = "0.3", default-features = false, features = ["wav"] }
burn = "0.8"
burn-wgpu = "0.8"
clap = { version = "4", features = ["derive"] }
hound = "3.5"
num = "0.4"
num-traits = "0.2"
serde = {version = "1", features = ["std", "derive"]}
tokenizers = {version = "0.13", default-features = false, features = ["onig", "http"]}
uuid = { version = "1", features = ["v4"] }
whisper-rs = "0.8"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "my_benchmark"
harness = false
